--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -6,7 +6,7 @@ spec:
   type: NodePort
   selector:
     app: node-app
-    version: blue
+    version: green
   ports:
   - port: 3000
     targetPort: 3000
